syntax = "proto3";

option go_package = "github.com/panagiotisptr/hermes-messenger/friends/protos";

service Friends {
  rpc AddFriend(AddFriendRequest) returns (AddFriendResponse);
  rpc RemoveFriend(RemoveFriendRequest) returns (RemoveFriendResponse);
  rpc GetFriends(GetFriendsRequest) returns (stream Friend);
}

enum Status {
  Accepted = "accepted";
  Pending = "pending";
  Declined = "declined";
}

message Friend {
  string id = 1;
  string user_id = 2;
  string friend_id = 3;
  Status friend_status = 4; 
}

message AddFriendRequest {
  string friend_id = 1;
}

message AddFriendResponse {
  Friend friend = 1;
}

message RemoveFriendRequest {
  string friend_id = 1;
}

message RemoveFriendResponse {}

message GetFriendsRequest {}
